--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,2 @@
-spring.profiles.active=prod
+spring.profiles.active=dev
 server.port=2131
-MicrosoftAppId=927f0010-3ca4-4234-9918-907f1fe2613a
-MicrosoftAppPassword=iddiT.B4_h..3v0JOlylnriZ1X4LVXKCsm
