getUser' validation fix for online tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=prod
 server.port=2131
+MicrosoftAppId=927f0010-3ca4-4234-9918-907f1fe2613a
+MicrosoftAppPassword=iddiT.B4_h..3v0JOlylnriZ1X4LVXKCsm
