--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10.10</version>
+        </dependency>
+        <dependency>
             <groupId>me.juan.event</groupId>
             <artifactId>EventUtils</artifactId>
             <version>1.0-SNAPSHOT</version>
